hw5_lab8/tests/errors/lex_bad_escape.kt
fun main() {
    val x = 5 @ 3
}
